# unu-api

./: .flake8  .gitignore  .pylintrc  Dockerfile  README.md  dev.yaml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  heroku.yml  pyproject.toml  test.yaml
app/: .env.example  aerich.ini  config.py  main.py  prestart.sh
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/agenda/: controller.py  models.py  routes.py  schemas.py
app/api/v1/associateds/: controller.py  models.py  routes.py  schemas.py
app/api/v1/events/: controller.py  models.py  routes.py  schemas.py
app/api/v1/mails/: controller.py  models.py  routes.py  schemas.py
app/api/v1/organizations/: controller.py  models.py  routes.py  schemas.py
app/api/v1/participants/: controller.py  models.py  routes.py  schemas.py
app/api/v1/speakers/: controller.py  models.py  routes.py  schemas.py
app/api/v1/users/: controller.py  models.py  routes.py  schemas.py
app/auth/: service.py
app/db/: __init__.py  crud.py  db.py  db_config.py
app/logger/: main.py
app/mails/: sender.py  service.py
app/mails/templates/: event_close.py  special_message.py  welcome.py
app/storage/: __init__.py  connect.py  service.py
app/utils/: abstrac_model.py  exceptions.py  general.py  responses.py
app/worker/: __init__.py  main.py
scripts/: build-dev.sh  build-prod.sh  dev.sh  lint-fix.sh  start.sh  test.sh
